# libdynpm

./: .gitignore  BUILD  Makefile.am  README.md  configure.ac  dynpm.conf  libdynpm.spec
include/: dynpm_common.h  dynpm_config.h  dynpm_network.h  dynpm_shm.h
src/common/: Makefile.am  logger.c
src/config/: Makefile.am  bison.y  config.c  flex.l  load.c
src/network/: Makefile.am  client.c  protocol.c  queue.c  server.c  tbon.c
src/print/: Makefile.am  print.c
src/shm/: Makefile.am  pmix.c  shm.c
